syntax = "proto3";

package envoy.extensions.regex_engines.v3;

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.regex_engines.v3";
option java_outer_classname = "GoogleRe2Proto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/regex_engines/v3;regex_enginesv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Google RE2]
// [#extension: envoy.regex_engines.google_re2]

// Google's `RE2 <https://github.com/google/re2>`_ regex engine. The regex string must adhere to
// the documented `syntax <https://github.com/google/re2/wiki/Syntax>`_. The engine is designed
// to complete execution in linear time as well as limit the amount of memory used.
//
// Envoy emits two stats for tracking the program size of regexes: the histogram ``re2.program_size``,
// which records the program size, and the counter ``re2.exceeded_warn_level``, which is incremented
// each time the program size exceeds the warn level threshold.
message GoogleRE2 {
}
